tests/paczka1/fuzzy1/92678293.err
Error in line 4: KzN A317 48,6
Error in line 8: Eqv A954 30,9
Error in line 9: weWa2ak0T A317 196,9
Error in line 20: Eqv A9 51,8
Error in line 23: Eqv A954 58,0
Error in line 24: Eqv A317 29,0
Error in line 25: A954 A9 82,7
